chore: Migrate to Gradle 9.0.0